PseudocodeParser.py
# Generated from Pseudocode.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PseudocodeParser ( Parser ):

    grammarFileName = "Pseudocode.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'arr'", "'to'", "'fun'", "'for'", "'in'", 
                     "'if'", "'else'", "'return'", "'end'", "'while'", "'break'", 
                     "'True'", "'False'", "'and'", "'or'", "'Null'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'=='", "'='", "'<='", "'<'", "'>='", "'>'", "'**'", 
                     "'*='", "'*'", "'+='", "'+'", "'-='", "'-'", "'/='", 
                     "'/'", "'['", "']'", "'('", "')'", "':'", "','" ]

    symbolicNames = [ "<INVALID>", "ARR", "TO", "FUN", "FOR", "IN", "IF", 
                      "ELSE", "RETURN", "END", "WHILE", "BREAK", "TRUE", 
                      "FALSE", "AND", "OR", "NULL", "ID", "FLOAT", "INT", 
                      "STRING", "COMMENT", "EQEQ", "EQ", "LESS_EQ", "LOW_THAN", 
                      "GREATER_EQ", "GREATER_THAN", "POW", "STAR_EQ", "STAR", 
                      "PLUS_EQ", "PLUS", "MINUS_EQ", "MINUS", "SLASH_EQ", 
                      "SLASH", "LBRACK", "RBRACK", "LPAREN", "RPAREN", "COLON", 
                      "COMMA", "NL", "WS" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_assignment = 2
    RULE_arrayInitialization = 3
    RULE_functionDecl = 4
    RULE_functionCallStatement = 5
    RULE_paramList = 6
    RULE_forEachLoop = 7
    RULE_regularForLoop = 8
    RULE_forUpdate = 9
    RULE_ifStatement = 10
    RULE_whileLoop = 11
    RULE_returnStatement = 12
    RULE_breakStatement = 13
    RULE_block = 14
    RULE_expression = 15
    RULE_logicalOrExpression = 16
    RULE_logicalAndExpression = 17
    RULE_comparisonExpression = 18
    RULE_additiveExpression = 19
    RULE_multiplicativeExpression = 20
    RULE_powerExpression = 21
    RULE_unaryExpression = 22
    RULE_primaryExpression = 23
    RULE_expressionList = 24
    RULE_atom = 25

    ruleNames =  [ "program", "statement", "assignment", "arrayInitialization", 
                   "functionDecl", "functionCallStatement", "paramList", 
                   "forEachLoop", "regularForLoop", "forUpdate", "ifStatement", 
                   "whileLoop", "returnStatement", "breakStatement", "block", 
                   "expression", "logicalOrExpression", "logicalAndExpression", 
                   "comparisonExpression", "additiveExpression", "multiplicativeExpression", 
                   "powerExpression", "unaryExpression", "primaryExpression", 
                   "expressionList", "atom" ]

    EOF = Token.EOF
    ARR=1
    TO=2
    FUN=3
    FOR=4
    IN=5
    IF=6
    ELSE=7
    RETURN=8
    END=9
    WHILE=10
    BREAK=11
    TRUE=12
    FALSE=13
    AND=14
    OR=15
    NULL=16
    ID=17
    FLOAT=18
    INT=19
    STRING=20
    COMMENT=21
    EQEQ=22
    EQ=23
    LESS_EQ=24
    LOW_THAN=25
    GREATER_EQ=26
    GREATER_THAN=27
    POW=28
    STAR_EQ=29
    STAR=30
    PLUS_EQ=31
    PLUS=32
    MINUS_EQ=33
    MINUS=34
    SLASH_EQ=35
    SLASH=36
    LBRACK=37
    RBRACK=38
    LPAREN=39
    RPAREN=40
    COLON=41
    COMMA=42
    NL=43
    WS=44

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PseudocodeParser.StatementContext)
            else:
                return self.getTypedRuleContext(PseudocodeParser.StatementContext,i)


        def EOF(self):
            return self.getToken(PseudocodeParser.EOF, 0)

        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(PseudocodeParser.NL)
            else:
                return self.getToken(PseudocodeParser.NL, i)

        def getRuleIndex(self):
            return PseudocodeParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = PseudocodeParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==43:
                self.state = 52
                self.match(PseudocodeParser.NL)
                self.state = 57
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 58
            self.statement()
            self.state = 67
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 60 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while True:
                        self.state = 59
                        self.match(PseudocodeParser.NL)
                        self.state = 62 
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if not (_la==43):
                            break

                    self.state = 64
                    self.statement() 
                self.state = 69
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

            self.state = 73
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==43:
                self.state = 70
                self.match(PseudocodeParser.NL)
                self.state = 75
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 76
            self.match(PseudocodeParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(PseudocodeParser.AssignmentContext,0)


        def functionDecl(self):
            return self.getTypedRuleContext(PseudocodeParser.FunctionDeclContext,0)


        def functionCallStatement(self):
            return self.getTypedRuleContext(PseudocodeParser.FunctionCallStatementContext,0)


        def forEachLoop(self):
            return self.getTypedRuleContext(PseudocodeParser.ForEachLoopContext,0)


        def regularForLoop(self):
            return self.getTypedRuleContext(PseudocodeParser.RegularForLoopContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(PseudocodeParser.IfStatementContext,0)


        def whileLoop(self):
            return self.getTypedRuleContext(PseudocodeParser.WhileLoopContext,0)


        def returnStatement(self):
            return self.getTypedRuleContext(PseudocodeParser.ReturnStatementContext,0)


        def breakStatement(self):
            return self.getTypedRuleContext(PseudocodeParser.BreakStatementContext,0)


        def getRuleIndex(self):
            return PseudocodeParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = PseudocodeParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 87
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 78
                self.assignment()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 79
                self.functionDecl()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 80
                self.functionCallStatement()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 81
                self.forEachLoop()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 82
                self.regularForLoop()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 83
                self.ifStatement()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 84
                self.whileLoop()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 85
                self.returnStatement()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 86
                self.breakStatement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PseudocodeParser.ID, 0)

        def EQ(self):
            return self.getToken(PseudocodeParser.EQ, 0)

        def expression(self):
            return self.getTypedRuleContext(PseudocodeParser.ExpressionContext,0)


        def arrayInitialization(self):
            return self.getTypedRuleContext(PseudocodeParser.ArrayInitializationContext,0)


        def getRuleIndex(self):
            return PseudocodeParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = PseudocodeParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(PseudocodeParser.ID)
            self.state = 90
            self.match(PseudocodeParser.EQ)
            self.state = 93
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [12, 13, 16, 17, 18, 19, 20, 34, 39]:
                self.state = 91
                self.expression()
                pass
            elif token in [1]:
                self.state = 92
                self.arrayInitialization()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayInitializationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PseudocodeParser.RULE_arrayInitialization

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class RangeArrayContext(ArrayInitializationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PseudocodeParser.ArrayInitializationContext
            super().__init__(parser)
            self.from_ = None # ExpressionContext
            self.to = None # ExpressionContext
            self.copyFrom(ctx)

        def ARR(self):
            return self.getToken(PseudocodeParser.ARR, 0)
        def LBRACK(self):
            return self.getToken(PseudocodeParser.LBRACK, 0)
        def TO(self):
            return self.getToken(PseudocodeParser.TO, 0)
        def RBRACK(self):
            return self.getToken(PseudocodeParser.RBRACK, 0)
        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PseudocodeParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(PseudocodeParser.ExpressionContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRangeArray" ):
                listener.enterRangeArray(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRangeArray" ):
                listener.exitRangeArray(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRangeArray" ):
                return visitor.visitRangeArray(self)
            else:
                return visitor.visitChildren(self)


    class ValueArrayContext(ArrayInitializationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PseudocodeParser.ArrayInitializationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ARR(self):
            return self.getToken(PseudocodeParser.ARR, 0)
        def LBRACK(self):
            return self.getToken(PseudocodeParser.LBRACK, 0)
        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PseudocodeParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(PseudocodeParser.ExpressionContext,i)

        def RBRACK(self):
            return self.getToken(PseudocodeParser.RBRACK, 0)
        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(PseudocodeParser.COMMA)
            else:
                return self.getToken(PseudocodeParser.COMMA, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValueArray" ):
                listener.enterValueArray(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValueArray" ):
                listener.exitValueArray(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitValueArray" ):
                return visitor.visitValueArray(self)
            else:
                return visitor.visitChildren(self)


    class SizeArrayContext(ArrayInitializationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PseudocodeParser.ArrayInitializationContext
            super().__init__(parser)
            self.size = None # Token
            self.fill = None # ExpressionContext
            self.copyFrom(ctx)

        def ARR(self):
            return self.getToken(PseudocodeParser.ARR, 0)
        def LPAREN(self):
            return self.getToken(PseudocodeParser.LPAREN, 0)
        def RPAREN(self):
            return self.getToken(PseudocodeParser.RPAREN, 0)
        def INT(self):
            return self.getToken(PseudocodeParser.INT, 0)
        def COMMA(self):
            return self.getToken(PseudocodeParser.COMMA, 0)
        def expression(self):
            return self.getTypedRuleContext(PseudocodeParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSizeArray" ):
                listener.enterSizeArray(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSizeArray" ):
                listener.exitSizeArray(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSizeArray" ):
                return visitor.visitSizeArray(self)
            else:
                return visitor.visitChildren(self)



    def arrayInitialization(self):

        localctx = PseudocodeParser.ArrayInitializationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_arrayInitialization)
        self._la = 0 # Token type
        try:
            self.state = 122
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                localctx = PseudocodeParser.RangeArrayContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 95
                self.match(PseudocodeParser.ARR)
                self.state = 96
                self.match(PseudocodeParser.LBRACK)
                self.state = 97
                localctx.from_ = self.expression()
                self.state = 98
                self.match(PseudocodeParser.TO)
                self.state = 99
                localctx.to = self.expression()
                self.state = 100
                self.match(PseudocodeParser.RBRACK)
                pass

            elif la_ == 2:
                localctx = PseudocodeParser.SizeArrayContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 102
                self.match(PseudocodeParser.ARR)
                self.state = 103
                self.match(PseudocodeParser.LPAREN)
                self.state = 104
                localctx.size = self.match(PseudocodeParser.INT)
                self.state = 107
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==42:
                    self.state = 105
                    self.match(PseudocodeParser.COMMA)
                    self.state = 106
                    localctx.fill = self.expression()


                self.state = 109
                self.match(PseudocodeParser.RPAREN)
                pass

            elif la_ == 3:
                localctx = PseudocodeParser.ValueArrayContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 110
                self.match(PseudocodeParser.ARR)
                self.state = 111
                self.match(PseudocodeParser.LBRACK)
                self.state = 112
                self.expression()
                self.state = 117
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==42:
                    self.state = 113
                    self.match(PseudocodeParser.COMMA)
                    self.state = 114
                    self.expression()
                    self.state = 119
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 120
                self.match(PseudocodeParser.RBRACK)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUN(self, i:int=None):
            if i is None:
                return self.getTokens(PseudocodeParser.FUN)
            else:
                return self.getToken(PseudocodeParser.FUN, i)

        def ID(self):
            return self.getToken(PseudocodeParser.ID, 0)

        def LPAREN(self):
            return self.getToken(PseudocodeParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(PseudocodeParser.RPAREN, 0)

        def COLON(self):
            return self.getToken(PseudocodeParser.COLON, 0)

        def END(self):
            return self.getToken(PseudocodeParser.END, 0)

        def paramList(self):
            return self.getTypedRuleContext(PseudocodeParser.ParamListContext,0)


        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(PseudocodeParser.NL)
            else:
                return self.getToken(PseudocodeParser.NL, i)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PseudocodeParser.StatementContext)
            else:
                return self.getTypedRuleContext(PseudocodeParser.StatementContext,i)


        def getRuleIndex(self):
            return PseudocodeParser.RULE_functionDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDecl" ):
                listener.enterFunctionDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDecl" ):
                listener.exitFunctionDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionDecl" ):
                return visitor.visitFunctionDecl(self)
            else:
                return visitor.visitChildren(self)




    def functionDecl(self):

        localctx = PseudocodeParser.FunctionDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_functionDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.match(PseudocodeParser.FUN)
            self.state = 125
            self.match(PseudocodeParser.ID)
            self.state = 126
            self.match(PseudocodeParser.LPAREN)
            self.state = 128
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==17:
                self.state = 127
                self.paramList()


            self.state = 130
            self.match(PseudocodeParser.RPAREN)
            self.state = 131
            self.match(PseudocodeParser.COLON)
            self.state = 133 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 132
                    self.match(PseudocodeParser.NL)

                else:
                    raise NoViableAltException(self)
                self.state = 135 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

            self.state = 149
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 134488) != 0):
                self.state = 137
                self.statement()
                self.state = 146
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,12,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 139 
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        while True:
                            self.state = 138
                            self.match(PseudocodeParser.NL)
                            self.state = 141 
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)
                            if not (_la==43):
                                break

                        self.state = 143
                        self.statement() 
                    self.state = 148
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,12,self._ctx)



            self.state = 154
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==43:
                self.state = 151
                self.match(PseudocodeParser.NL)
                self.state = 156
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 157
            self.match(PseudocodeParser.END)
            self.state = 158
            self.match(PseudocodeParser.FUN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionCallStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PseudocodeParser.ID, 0)

        def LPAREN(self):
            return self.getToken(PseudocodeParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(PseudocodeParser.RPAREN, 0)

        def expressionList(self):
            return self.getTypedRuleContext(PseudocodeParser.ExpressionListContext,0)


        def getRuleIndex(self):
            return PseudocodeParser.RULE_functionCallStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionCallStatement" ):
                listener.enterFunctionCallStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionCallStatement" ):
                listener.exitFunctionCallStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionCallStatement" ):
                return visitor.visitFunctionCallStatement(self)
            else:
                return visitor.visitChildren(self)




    def functionCallStatement(self):

        localctx = PseudocodeParser.FunctionCallStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_functionCallStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160
            self.match(PseudocodeParser.ID)
            self.state = 161
            self.match(PseudocodeParser.LPAREN)
            self.state = 163
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 566937726976) != 0):
                self.state = 162
                self.expressionList()


            self.state = 165
            self.match(PseudocodeParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(PseudocodeParser.ID)
            else:
                return self.getToken(PseudocodeParser.ID, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(PseudocodeParser.COMMA)
            else:
                return self.getToken(PseudocodeParser.COMMA, i)

        def getRuleIndex(self):
            return PseudocodeParser.RULE_paramList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParamList" ):
                listener.enterParamList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParamList" ):
                listener.exitParamList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamList" ):
                return visitor.visitParamList(self)
            else:
                return visitor.visitChildren(self)




    def paramList(self):

        localctx = PseudocodeParser.ParamListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_paramList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 167
            self.match(PseudocodeParser.ID)
            self.state = 172
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==42:
                self.state = 168
                self.match(PseudocodeParser.COMMA)
                self.state = 169
                self.match(PseudocodeParser.ID)
                self.state = 174
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForEachLoopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self, i:int=None):
            if i is None:
                return self.getTokens(PseudocodeParser.FOR)
            else:
                return self.getToken(PseudocodeParser.FOR, i)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(PseudocodeParser.ID)
            else:
                return self.getToken(PseudocodeParser.ID, i)

        def IN(self):
            return self.getToken(PseudocodeParser.IN, 0)

        def COLON(self):
            return self.getToken(PseudocodeParser.COLON, 0)

        def END(self):
            return self.getToken(PseudocodeParser.END, 0)

        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(PseudocodeParser.NL)
            else:
                return self.getToken(PseudocodeParser.NL, i)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PseudocodeParser.StatementContext)
            else:
                return self.getTypedRuleContext(PseudocodeParser.StatementContext,i)


        def getRuleIndex(self):
            return PseudocodeParser.RULE_forEachLoop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForEachLoop" ):
                listener.enterForEachLoop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForEachLoop" ):
                listener.exitForEachLoop(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForEachLoop" ):
                return visitor.visitForEachLoop(self)
            else:
                return visitor.visitChildren(self)




    def forEachLoop(self):
